--- a/app/views/levels/_home_as_partial.html.erb
+++ b/app/views/levels/_home_as_partial.html.erb
@@ -4,8 +4,8 @@
   </div>
 
   <div class="play_btn">
-    <%= link_to "PLAY", levels_path, remote: true, id: "play_link" %><br>
-    <%= link_to "Zen mode", level_path('zen'), remote: true, id: "play_link" %><br>
+    <%= link_to "Levels", levels_path, remote: true, id: "play_link" %><br>
+    <%= link_to "Zen Mode", level_path('zen'), remote: true, id: "play_link" %><br><br>
     <span class="options">options</span>
   </div>
   
