--- a/app/views/levels/_theme_skin.html.erb
+++ b/app/views/levels/_theme_skin.html.erb
@@ -19,7 +19,7 @@
     --main-background-color: black;
     --complete-highlight-color: rgb(104, 53, 53);
   }
-<% elsif level.id = 9999 %>
+<% elsif level.id == 9999 %>
   :root {
     --main-background-color: #d1bfba;
     --complete-highlight-color: rgb(63, 56, 54);
