--- a/app/views/levels/_achievement.html.erb
+++ b/app/views/levels/_achievement.html.erb
@@ -1,4 +1,6 @@
 <div class="achievement">
+<%if false %>
   <div id="achievement_header">Achievement <span class="glyphicon glyphicon-flag"></span></div>
-  Optimal Solution Found
+<% end %>
+<span class="glyphicon glyphicon-flag"></span> Optimal Solution Found
 </div>
