--- a/app/views/levels/_limit_count.html.erb
+++ b/app/views/levels/_limit_count.html.erb
@@ -6,7 +6,7 @@
   <div class="limit_dot glyphicon glyphicon-flag"></div>
 
   <% (@limit - @level.path.length).times do %>
-    <div class="limit_dot glyphicon">．</div>
+    <div class="limit_dot">&middot;</div>
   <% end %>
 
 
