--- a/app/views/levels/_loading.html.erb
+++ b/app/views/levels/_loading.html.erb
@@ -1,5 +1,5 @@
 <div class="curr_word text-center loading">
-  Total zen levels solved: <%= user.total_completed_zen_levels %>
+  <span class="small">Total solved:</span> <%= user.total_completed_zen_levels %>
   <br>
-  Current Streak: <%= user.continuous_zen_levels %>
+  <span class="small">Current Streak:</span> <%= user.continuous_zen_levels %>
 </div>
