--- a/app/views/levels/reload_show.js.erb
+++ b/app/views/levels/reload_show.js.erb
@@ -1,3 +1,8 @@
 $('body').css("backgroundColor", "initial");
+
+<% if @history.size == 1 && !@undo && !@level.id.in?(1..5) && rand(5) == 0 %>
+  ad_display.performClick();
+<% end %>
+
 $('.content').html("<%= j render 'show_as_partial'%>")
 everyFunction();
