--- a/app/views/levels/_home_as_partial.html.erb
+++ b/app/views/levels/_home_as_partial.html.erb
@@ -5,10 +5,15 @@
 
   <div class="play_btn">
     <%= link_to "Levels", levels_path, remote: true, id: "play_link" %><br>
-    <%= link_to "Zen Mode", loading_level_path('zen'), remote: true, id: "play_link" %><br><br>
+
+    <% if @completed_levels.size < 20 %>
+      <span class="glyphicon glyphicon-lock"></span>
+    <% end %>
+
+    <%= link_to "Zen Mode", loading_level_path('zen'), remote: true, id: "play_link", class: "#{'disabled' if @completed_levels.size < 20}" %><br><br>
     <span class="options">options</span>
   </div>
-  
+
 
   <div class="options_overlay">
     <%= render 'options_container' %>
