--- a/app/views/levels/_loading.html.erb
+++ b/app/views/levels/_loading.html.erb
@@ -1,4 +1,4 @@
-<div class="curr_word text-center loading">
+<div class="curr_word text-center zen_loading">
   <span class="small">Total solved:</span> <%= user.total_completed_zen_levels %>
   <br>
   <span class="small">Current Streak:</span> <%= user.continuous_zen_levels %>
