fix back_btn css from absolute to fixed

--- a/app/assets/stylesheets/levels.css.scss
+++ b/app/assets/stylesheets/levels.css.scss
@@ -455,7 +455,7 @@ html, body {
   background: linear-gradient(to right, var(--complete-highlight-color), var(--main-background-color)); /*Standard*/
   padding: 20px 0px;
   .back_btn {
-    position: absolute;
+    position: fixed;
     bottom: 10px;
     right: 10px;
     color: white;
@@ -514,7 +514,7 @@ html, body {
     display: none;
     width: 100vw;
     height: 100vh;
-    position: absolute;
+    position: fixed;
     top: 0;
     left: 0;
     background: var(--main-background-color);
@@ -527,7 +527,7 @@ html, body {
     justify-content: center;
     font-size: 5vh;
     .back_btn {
-      position: absolute;
+      position: fixed;
       bottom: 10px;
       right: 10px;
       opacity: 0.8;
