remove some less sensible zen levels, fix reWORD to REWORD in error page

--- a/app/views/levels/_error.html.erb
+++ b/app/views/levels/_error.html.erb
@@ -12,7 +12,7 @@
   <div class="glitch" data-text="NO INTERNET ACCESS NO INTERNET ACCESS NO INTERNET ACCESS" style="margin-left: -13vh; padding-left: 20px;">NO INTERNET ACCESS NO INTERNET ACCESS NO INTERNET ACCESS</div>
   <div class="glitch" data-text="NO INTERNET ACCESS NO INTERNET ACCESS NO INTERNET ACCESS" style="margin-left: -16vh; padding-left: 10px;">NO INTERNET ACCESS NO INTERNET ACCESS NO INTERNET ACCESS</div>
 
-  <div class="refresh_btn glitch" data-text="reWORD">re LOAD</div>
+  <div class="refresh_btn glitch" data-text="REWORD">RE LOAD</div>
 
   <div class="glitch" data-text="NO INTERNET ACCESS NO INTERNET ACCESS NO INTERNET ACCESS" style="margin-left: -16vh; padding-right: 5px;">NO INTERNET ACCESS NO INTERNET ACCESS NO INTERNET ACCESS</div>
   <div class="glitch" data-text="NO INTERNET ACCESS NO INTERNET ACCESS NO INTERNET ACCESS" style="margin-left: -15vh; padding-left: 10px;">NO INTERNET ACCESS NO INTERNET ACCESS NO INTERNET ACCESS</div>
