change SC song, change contact email

--- a/app/views/levels/_options_container.html.erb
+++ b/app/views/levels/_options_container.html.erb
@@ -12,14 +12,13 @@
     <h5>Game Design & Programming</h5>
     Dion Chan<br><br>
     <h5>Music</h5>
-    <%= link_to "Jan Amit - Heal [Quok Remix]", "https://soundcloud.com/quok/jan-amit-heal-quok-remix", class:"music_title" %>
+    <%= link_to "Peritune - Gentle Theme", "https://soundcloud.com/sei_peridot/gentle_theme", class:"music_title" %>
 
     <div class="soundcloud_links">
-      <%= link_to "Jan Amit", "https://soundcloud.com/jan-amit", class: "jan_amit" %>
-      <%= link_to "https://soundcloud.com/quok/jan-amit-heal-quok-remix" do %>
+      <%#= link_to "Peritune", "https://soundcloud.com/sei_peridot" %>
+      <%= link_to "https://soundcloud.com/sei_peridot/gentle_theme" do %>
         <% image_tag "https://spadgos.github.io/sfjs-next-soundcloud/cloud.png", class:"soundcloud_logo" %>
       <% end %>
-      <%= link_to "Quok", "https://soundcloud.com/quok", class: "quok" %>
     </div>
   </div>
 </div>
