Deprecate css varaible and css calc

--- a/app/views/levels/_complete_as_partial.html.erb
+++ b/app/views/levels/_complete_as_partial.html.erb
@@ -1,4 +1,6 @@
 <span class="level_no" data-level_no=<%= @level.id %>></span>
+<span id="highlight_color_setter"></span>
+
 <%= render 'theme_skin', level: @level %>
 
 <span class:"hidden" id="level_complete"></span>
