--- a/app/views/levels/_home_as_partial.html.erb
+++ b/app/views/levels/_home_as_partial.html.erb
@@ -1,3 +1,4 @@
+<%= render 'theme_skin', level: @level %>
 <div class="starting_page">
   <div class="game_title_cont">
     <div class="game_title">REWORD</div>
