--- a/app/views/levels/_limit_count.html.erb
+++ b/app/views/levels/_limit_count.html.erb
@@ -12,8 +12,10 @@
 
 </div>
 
+<% if false %>
 <style>
 .limit_count .limit_dot:nth-child(<%= @history.length %>) {
   color: var(--main-background-color);
 }
 </style>
+<% end %>
