--- a/app/assets/stylesheets/levels.css.scss
+++ b/app/assets/stylesheets/levels.css.scss
@@ -3,19 +3,19 @@
 
 
 html, body{
-  height: 100%;
-  width: 100%;
+  height: 100% !important;
+  width: 100% !important;
+  min-width: 100% !important;
   // position: fixed;
   overflow: hidden;
-  margin: 0;
-  padding: 0;
+  margin: 0 !important;
+  padding: 0 !important;
 }
 
 div {
   margin: 0;
   padding: 0;
 }
-
 
 .content {
   overflow-y: auto;
@@ -127,29 +127,30 @@ div {
   opacity: 0.8 !important;
 }
 
+.modal-dialog{
+  position: relative !important;
+  display: table !important; /* This is important */
+  overflow-y: auto !important;
+  overflow-x: auto !important;
+  min-width: 100vw !important;
+  width: 100vw !important;
+  min-width: 10px;
+  margin-left: 0px !important;
+}
+
 .choices {
-  @media (min-width: 768px) {
-    .modal-dialog{
-      position: relative;
-      display: table; /* This is important */
-      overflow-y: auto;
-      overflow-x: auto;
-      width: auto;
-      min-width: 10px;
-    }
-  }
   .modal-content, .modal-body {
     background-color: transparent;
     -webkit-box-shadow: 0 0px 0px rgba(0,0,0,0);
     box-shadow: 0 0px 0px rgba(0,0,0,0);
     border-width: 0px;
-    padding: 0;
+    padding: 0 !important;
+    min-width: 100vw!important;;
+    width: 100vw !important;
   }
   .next_word {
     height: 9vh;
     line-height: 9vh;
-    margin: 0px 5px;
-    padding: 0;
     font-weight: bold;
     font-size: 5vh;
     border: 1px solid var(--main-border-color);
@@ -157,18 +158,22 @@ div {
     padding: 0px 10px;
     opacity: 1;
     background-color: white;
+    display: flex;
+    justify-content: space-evenly;
   }
   .next_word_container {
     background-color: none;
     margin: 0;
     padding: 0;
+    width: 100vw !important;
     .next_word_letter {
       margin: 0;
-      display: inline-block;
-      width: 5vh;
+      float: left;
+      width: 7.2vh;
     }
     .highlight, a:link, a:visited, .next_word:hover {
       color: var(--highlight-color);
+      text-decoration: none;
     }
   }
 }
@@ -432,8 +437,13 @@ html, body {
   max-width: 100vw;
   position: relative;
   * {
-    position: absolute;
-    left: 99999px;
+    // position: absolute;
+    // left: 99999px;
+    z-index: -9999;
+    position: fixed;
+    top: 0;
+    left: 0;
+    opacity: 0;
   }
 }
 
@@ -628,13 +638,12 @@ html, body {
       cursor: default;
     }
   }
-  .level_start_word span, .level_target_word span {
-    width: 2vh;
-    display: inline-block;
+  .level_start_word, .level_target_word {
     text-transform: uppercase;
     text-align: center;
     font-size: 2vh;
     color: white;
+    letter-spacing: 2px;
   }
   .chapter {
     text-transform: uppercase;
