--- a/app/assets/stylesheets/levels.css.scss
+++ b/app/assets/stylesheets/levels.css.scss
@@ -127,26 +127,23 @@ div {
   opacity: 0.8 !important;
 }
 
-.modal-dialog{
-  position: relative !important;
-  display: table !important; /* This is important */
-  overflow-y: auto !important;
-  overflow-x: auto !important;
-  min-width: 100vw !important;
-  width: 100vw !important;
-  min-width: 10px;
-  margin-left: 0px !important;
-}
-
 .choices {
+  .modal-dialog{
+    position: relative !important;
+    display: table !important; /* This is important */
+    overflow-y: auto !important;
+    overflow-x: auto !important;
+    width: auto;
+    min-width: 10px;
+    margin: 0 auto;
+    // margin-left: 0px !important;
+  }
   .modal-content, .modal-body {
     background-color: transparent;
     -webkit-box-shadow: 0 0px 0px rgba(0,0,0,0);
     box-shadow: 0 0px 0px rgba(0,0,0,0);
     border-width: 0px;
     padding: 0 !important;
-    min-width: 100vw!important;
-    width: 100vw !important;
   }
   .next_word {
     height: 9vh;
@@ -163,9 +160,8 @@ div {
   }
   .next_word_container {
     background-color: none;
-    margin: 0;
+    margin: 0 auto;
     padding: 0;
-    width: 100vw !important;
     .next_word_letter {
       margin: 0;
       float: left;
@@ -294,9 +290,9 @@ div {
 .definition {
   width: 100%;
   .definition_content {
-    padding: 40px;
+    padding: 40px 5px;
     max-width: 800px;
-    color: #aaa;
+    color: #999999;
     opacity: 0.7;
     text-align: center;
     font-size: 2vh;
