--- a/app/assets/stylesheets/levels.css.scss
+++ b/app/assets/stylesheets/levels.css.scss
@@ -294,9 +294,9 @@ div {
 .definition {
   width: 100%;
   .definition_content {
-    padding: 40px;
+    padding: 40px 5px;
     max-width: 800px;
-    color: #aaa;
+    color: #999999;
     opacity: 0.7;
     text-align: center;
     font-size: 2vh;
